# Programming

./: README.md
Lab10/: README.md  program  time.h  time_func.c  var11.c
Lab11/: README.md  task1.c  task2.c  task3.c  task4.c  task5.c
Lab12/: 1_3.c  README.md  game.c  game.h  main.c
Lab13/: CMakeLists.txt  Makefile  README.md
Lab13/include/: game.h
Lab13/src/: game.c  main.c
Lab14/: 3.c  4.c  5.c  README.md  fractal.c
Lab15/: 3.c  4.c  README.md  staff.csv
LabC++/: CMakeLists.txt  README.md  README1.md
LabC++/src/: main.cpp  paint_core.cpp
Lab_Threads/:  threads.md  3.4.c  3.5.c  3.6.c  4.8.c  4.c  results.csv
RGR/: CMakeLists.txt  README.md  config  endpoints.json  main.c  test.c
Test_UNIT_lab/: README.md  matrix_operations.c  matrix_operations.h  tests.c
lab9_git/: README.md  file.txt  file1.txt  mergesort.py  sort.c
